--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-native-elements": "^2.0.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "spotify-web-api-js": "^1.4.0"
