--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-native-elements": "^2.0.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "spotify-web-api-js": "^1.4.0"
+    "spotify-web-api-js": "^1.4.0",
+    "youtube-api-search": "0.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
