--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native-elements": "^2.0.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "simple-react-comments": "^1.1.0",
     "spotify-web-api-js": "^1.4.0",
     "youtube-api-search": "0.0.5"
   },
